Enable background eviction by default

--- a/docs/stellar-core_example.cfg
+++ b/docs/stellar-core_example.cfg
@@ -236,10 +236,10 @@ BUCKETLIST_DB_INDEX_CUTOFF = 20
 # this value is ingnored and indexes are never persisted.
 BUCKETLIST_DB_PERSIST_INDEX = true
 
-# EXPERIMENTAL_BACKGROUND_EVICTION_SCAN (bool) default false
+# BACKGROUND_EVICTION_SCAN (bool) default true
 # Determines whether eviction scans occur in the background thread. Requires
-# that EXPERIMENTAL_BACKGROUND_EVICTION_SCAN is set to true.
-EXPERIMENTAL_BACKGROUND_EVICTION_SCAN = false
+# that USE_DEPRECATED_SQL is set to false.
+BACKGROUND_EVICTION_SCAN = true
 
 # EXPERIMENTAL_BACKGROUND_OVERLAY_PROCESSING (bool) default false
 # Determines whether some of overlay processing occurs in the background
