--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -80,36 +80,51 @@ tracy-client = { version = "=0.17.0", features = [
 #
 
 # Note: due to some subtle mis-features in Cargo's unification of transitive
-# dependency versions, we do _not_ refer to all the separate soroban crate
-# versions directly here. See $(top_srcdir)/src/Makefile.am for the logic that
-# builds each crate separately and then provides them to the stellar-core crate
-# here.
+# dependency versions, we do _not_ usually use to all the separate soroban crate
+# versions listed directly here. See $(top_srcdir)/src/Makefile.am for the logic
+# that builds each crate separately and then provides them to the stellar-core
+# crate here.
 #
-# However this fact makes it difficult to use an IDE to work on this crate since
-# the IDE will not be able to resolve the hosts to anything at all. So for the sake
-# of making IDE-edits, we keep some commented-out copies of the host dependencies
-# here. These are not used by the build system, but if you uncomment them while
-# working they will allow your IDE to at least find "nearly correct" versions of
-# the host dependencies. Make sure they are commented back out before committing
-# (and be careful to reset any changes the IDE makes to Cargo.lock)
+# However that type of "non-unified" build breaks sanitizer builds, and also
+# makes it difficult to use an IDE to work on this crate since the IDE will not
+# be able to resolve the hosts to anything at all. So we keep some _optional_
+# copies of the host dependencies here, and allow enabling them with the
+# `unified` feature here.
+#
+# To reiterate: the soroban-env-host-p{21,22,23}... dependency blocks listed
+# here are NOT part of the default build. The default build relies on the
+# versions pinned as git submodules.
+#
+# However, you can _manually_ switch the default build by enabling the `unified`
+# feature using a feature-toggle in an IDE (eg. using the VS Code "Rust Feature
+# Toggler" extension), and the build system (src/Makefile.am) can be configured
+# to use the `unified` feature if you configure with
+# --enable-unified-rust-unsafe-for-production.
+#
+# If you do a unified build, be careful to reset any changes the IDE makes to
+# Cargo.lock! The unified build will re-resolve transitive dependencies and
+# unify them, perturbing the contents of the lockfile.
 
-# [dependencies.soroban-env-host-p23]
-# version = "=23.0.0"
-# git = "https://github.com/stellar/rs-soroban-env"
-# package = "soroban-env-host"
-# rev = "31cb455b87a25a1c049360b5422c411deae63ba2"
+[dependencies.soroban-env-host-p23]
+version = "=23.0.0"
+git = "https://github.com/stellar/rs-soroban-env"
+package = "soroban-env-host"
+rev = "688bc34e6cd15c71742139e625268c7f30f55a92"
+optional = true
 
-# [dependencies.soroban-env-host-p22]
-# version = "=22.0.0"
-# git = "https://github.com/stellar/rs-soroban-env"
-# package = "soroban-env-host"
-# rev = "1cd8b8dca9aeeca9ce45b129cd923992b32dc258"
+[dependencies.soroban-env-host-p22]
+version = "=22.0.0"
+git = "https://github.com/stellar/rs-soroban-env"
+package = "soroban-env-host"
+rev = "1cd8b8dca9aeeca9ce45b129cd923992b32dc258"
+optional = true
 
-# [dependencies.soroban-env-host-p21]
-# version = "=21.2.2"
-# git = "https://github.com/stellar/rs-soroban-env"
-# package = "soroban-env-host"
-# rev = "7eeddd897cfb0f700f938b0c8d6f0541150d1fcb"
+[dependencies.soroban-env-host-p21]
+version = "=21.2.2"
+git = "https://github.com/stellar/rs-soroban-env"
+package = "soroban-env-host"
+rev = "7eeddd897cfb0f700f938b0c8d6f0541150d1fcb"
+optional = true
 
 # The test wasms and synth-wasm crate should usually be taken from the highest
 # supported host, since test material usually just grows over time.
@@ -117,19 +132,23 @@ tracy-client = { version = "=0.17.0", features = [
 [dependencies.soroban-test-wasms]
 version = "=22.0.0"
 git = "https://github.com/stellar/rs-soroban-env"
-rev = "a3f7fca9c2ad89796c7525a648da086543502dd5"
+rev = "1cd8b8dca9aeeca9ce45b129cd923992b32dc258"
 
 [dependencies.soroban-synth-wasm]
 version = "=22.0.0"
 git = "https://github.com/stellar/rs-soroban-env"
-rev = "a3f7fca9c2ad89796c7525a648da086543502dd5"
+rev = "1cd8b8dca9aeeca9ce45b129cd923992b32dc258"
 
 [dependencies.stellar-quorum-analyzer]
 version = "0.1.0"
 git = "https://github.com/stellar/stellar-quorum-analyzer"
-rev = "678acf18ee635c4270e241030d6e83bb0b98b5d5"
+rev = "19a94f05018c5db45daa0d62de7b3282b61f276b"
 
 [features]
+
+# Turn on the optional unified build. This is typically only useful in an IDE or when
+# orchestrated by the build system. See note above and in docs/CONTRIBUTING.md.
+unified = ["dep:soroban-env-host-p21", "dep:soroban-env-host-p22", "dep:soroban-env-host-p23"]
 
 tracy = ["dep:tracy-client"]
 
