--- a/soroban-settings/testnet_settings_enable_upgrades.json
+++ b/soroban-settings/testnet_settings_enable_upgrades.json
@@ -1,6 +1,25 @@
 {
   "updated_entry": [
     {
+      "contract_ledger_cost_v0": {
+        "ledger_max_disk_read_entries": 500,
+        "ledger_max_disk_read_bytes": 3500000,
+        "ledger_max_write_ledger_entries": 250,
+        "ledger_max_write_bytes": 143360,
+        "tx_max_disk_read_entries": 100,
+        "tx_max_disk_read_bytes": 200000,
+        "tx_max_write_ledger_entries": 50,
+        "tx_max_write_bytes": 132096,
+        "fee_disk_read_ledger_entry": "6250",
+        "fee_write_ledger_entry": "10000",
+        "fee_disk_read1_kb": "1786",
+        "soroban_state_target_size_bytes": "3000000000",
+        "rent_fee1_kb_soroban_state_size_low": "-17000",
+        "rent_fee1_kb_soroban_state_size_high": "10000",
+        "soroban_state_rent_fee_growth_factor": 5000
+      }
+    },
+    {
       "contract_data_entry_size_bytes": 65536
     }
   ]
