--- a/deny.toml
+++ b/deny.toml
@@ -87,6 +87,8 @@ db-urls = ["https://github.com/rustsec/advisory-db"]
 # output a note when they are encountered.
 ignore = [
     #"RUSTSEC-0000-0000",
+    "RUSTSEC-2024-0436", # Paste is unmaintained, used by ark and wasmi.
+    "RUSTSEC-2024-0388", # Derivative is unmaintained, used by ark.
 ]
 # Threshold for security vulnerabilities, any vulnerability with a CVSS score
 # lower than the range specified will be ignored. Note that ignored advisories
